<resources>
    <string name="app_name">meeThem</string>
    <string name="nav_home">Home</string>
    <string name="nav_create_plan">Crear plan</string>
    <string name="nav_profile">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_recycler_line_plan_image_content_description">Foto del plan</string>
    <string name="home_recycler_line_creator">"Creador: "</string>
    <string name="home_recycler_line_group">"Grupo: "</string>
    <string name="hintMessage">Message</string>
    <string name="contact_picker_recycler_line_contact_image_content_description">Imagen del contacto</string>
    <string name="read_contact_permissions_not_acepted">Para el correcto funcionamiento de la aplicación debe aceptar los permisos</string>
    <string name="contact_list_is_empty">No hay contactos en el teléfono</string>
    <string name="date_survey">Elegir la fecha</string>
    <string name="pin_msg">Anclar</string>
    <string name="pin_msg_title">Anclar texto al panel</string>
    <string name="pinned_msg_title">Mensaje destacado</string>
    <string name="create_date_survey_title">Crear encuesta de fecha</string>
    <string name="create_date_survey_btn">Crear</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_plan_create_title">Create</string>
    <string name="nav_profile_title">Profile</string>
    <string name="selected_contacts_list_is_empty">Seleccione al menos 1 contacto</string>
    <string name="text_input_layout_plan_name_hint">Nombre</string>
    <string name="text_input_layout_plan_max_people_hint">Capacidad máxima</string>
    <string name="text_view_miembros_text">Miembros</string>
    <string name="button_pick_contacts_text">Seleccionar miembros</string>
    <string name="plan_created_ok">Plan creado correctamente</string>
    <string name="plan_creation_no_image">Es obligatorio poner una imagen al plan</string>
    <string name="plan_creation_no_name">Es obligatorio poner un nombre al plan</string>
    <string name="plan_creation_no_max_people">Es obligatorio poner una capacidad al plan</string>
    <string name="plan_creation_too_much_people">Los miembros añadidos superan la capacidad máxima del plan</string>
    <string name="pin_image_to_plan">Anclar imagen al plan</string>
    <string name="pinned_image_title">Imagen destacada</string>
    <string name="contact_picker_menu_item_refresh_contacts_title">Actualizar</string>
    <string name="contacts_refresh_OK">Contactos actualizados exitosamente.</string>
    <string name="contact_picker_menu_item_search_contacts_title">Buscar</string>
    <string name="contacts_search_view_query_hint">Buscar contactos</string>
    <string name="progress_bar_text">Loading...</string>
    <string name='exit_plan_text'>Salir</string>
    <string name='confirm_plan_text'>Confirmar</string>
    <string name='select_date'>Seleccionar fecha</string>
    <string name="plan_exited">Se ha abandonado el plan correctamente</string>
    <string name="plan_confirmed">Se ha confirmado asistencia al plan correctamente</string>
    <string name="plan_full">El plan se ha llenado</string>
    <string name="edit_plan_edit_text_date_hint">Selecciona una fecha</string>
    <string name="attached_message_ok">Mensaje anclado correctamente</string>
    <string name="attached_image_ok">Imagen anclada correctamente</string>
    <string name="no_network_available">La red no está disponible. La aplicación puede no funcionar correctamente.</string>
    <string name="no_network_available_alert_title">Sin conexión</string>
    <string name="send_sms">Enviar</string>
    <string name="no_number">Introduzca un número de teléfono</string>
    <string name="format_error">Error en el formato del número de teléfono</string>
    <string name="verif_error">Ha ocurrido un error inesperado. Inténtelo más tarde</string>
    <string name="sended_sms">El código de verificación fue enviado</string>
    <string name="type_verif_code">Ingrese el código de verificación</string>
    <string name="verif_code">Verificar</string>
    <string name="no_code">Código vacío</string>
    <string name="code_length_error">El código es de 6 dígitos</string>
    <string name="code_error">Error de verificación</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="register">Registrar</string>
    <string name="username_empty">Ingrese un nombre de usuario</string>
    <string name="username_length_error">El nombre de usuario debe contener entre 3 y 16 caracteres</string>
    <string name="username_illegal_chars">El nombre de usuario solo puede tener letras, números, -, _ y .</string>
    <string name="existing_username">El nombre de usuario ya está en uso</string>
    <string name="correct_register">Registro exitoso</string>
    <string name="username_change">Cambiar nombre de usuario</string>
    <string name="new_username_hint">Nuevo nombre de usuario</string>
    <string name="changed_username">Cambio realizado</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="logout">Cerrar Sesión</string>
</resources>