<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".ui.CreatePlanFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreatePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        android:focusable="true" />

    <ImageView
        android:id="@+id/planImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icons_imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/planImagePickerButton"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/icons_insert_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/planImage"
        app:layout_constraintTop_toTopOf="@+id/planImage"
        app:layout_constraintVertical_bias="0.116" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/planNameTextInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_layout_plan_name_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planImage"
        app:layout_constraintVertical_bias="0.066">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPlanName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/planMaxPeopleTextInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_layout_plan_max_people_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planNameTextInputLayout"
        app:layout_constraintVertical_bias="0.041">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPlanMaxPeople"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="293dp"
        android:layout_height="179dp"
        android:layout_marginBottom="84dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPickContacts"
        app:layout_constraintVertical_bias="0.192"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectedContactsRecyclerView"
            android:layout_width="295dp"
            android:layout_height="173dp" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/text_view_miembros_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planMaxPeopleTextInputLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonPickContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_pick_contacts_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/planMaxPeopleTextInputLayout"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/dateTextView"
        android:layout_width="254dp"
        android:layout_height="49dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/select_date"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>